--- a/radical_os/Makefile
+++ b/radical_os/Makefile
@@ -1,6 +1,8 @@
 ASM=nasm
 
 SRC_DIR = src
+BOOTLOADER_DIR = $(SRC_DIR)/bootloader
+KERNEL_DIR = $(SRC_DIR)/kernel
 BUILD_DIR = build
 
 .PHONY: all floppy_image kernel bootloader clean always
@@ -10,31 +12,27 @@ BUILD_DIR = build
 #
 floppy_image: $(BUILD_DIR)/main_floppy.img
 
-
 $(BUILD_DIR)/main_floppy.img: bootloader kernel
 	dd if=/dev/zero of=$(BUILD_DIR)/main_floppy.img bs=512 count=2880
 	mkfs.fat -F 12 -n "RDOS" $(BUILD_DIR)/main_floppy.img
 	dd if=$(BUILD_DIR)/bootloader.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
-	mcopy -o -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
+	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
 
 #
 # Bootloader
 #
 bootloader: $(BUILD_DIR)/bootloader.bin
 
-$(BUILD_DIR)/bootloader.bin: always
-
+$(BUILD_DIR)/bootloader.bin: $(BOOTLOADER_DIR)/boot.asm always
+	$(ASM) $(BOOTLOADER_DIR)/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin
 
 #
 # Kernel
 #
 kernel: $(BUILD_DIR)/kernel.bin
 
-$(BUILD_DIR)/kernel.bin:  always
-	$(ASM) $(SRC_DIR)/kernel/main.asm -f bin -o $(BUILD_DIR)/kernel.bin
-
-
-
+$(BUILD_DIR)/kernel.bin: $(KERNEL_DIR)/main.asm always
+	$(ASM) $(KERNEL_DIR)/main.asm -f bin -o $(BUILD_DIR)/kernel.bin
 
 #
 # Always
