--- a/radical_os/Makefile
+++ b/radical_os/Makefile
@@ -1,38 +1,60 @@
 ASM=nasm
+CC=gcc
+CC16=/usr/bin/watcom/binl/wcc
+LD16 = /usr/bin/watcom/binl/wlink
+SRC_DIR=src
+TOOLS_DIR=tools
+BUILD_DIR=build
 
-SRC_DIR = src
-BOOTLOADER_DIR = $(SRC_DIR)/bootloader
-KERNEL_DIR = $(SRC_DIR)/kernel
-BUILD_DIR = build
+.PHONY: all floppy_image kernel bootloader clean always tools_fat
 
-.PHONY: all floppy_image kernel bootloader clean always
+all: floppy_image tools_fat
 
 #
-# Floppy Image
+# Floppy image
 #
 floppy_image: $(BUILD_DIR)/main_floppy.img
 
 $(BUILD_DIR)/main_floppy.img: bootloader kernel
 	dd if=/dev/zero of=$(BUILD_DIR)/main_floppy.img bs=512 count=2880
 	mkfs.fat -F 12 -n "RDOS" $(BUILD_DIR)/main_floppy.img
-	dd if=$(BUILD_DIR)/bootloader.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
+	dd if=$(BUILD_DIR)/stage1.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
+	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/stage2.bin "::stage2.bin"
 	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
+	mcopy -i $(BUILD_DIR)/main_floppy.img test.txt "::test.txt"
 
 #
 # Bootloader
 #
-bootloader: $(BUILD_DIR)/bootloader.bin
+bootloader: stage1 stage2
 
-$(BUILD_DIR)/bootloader.bin: $(BOOTLOADER_DIR)/boot.asm always
-	$(ASM) $(BOOTLOADER_DIR)/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin
+stage1: $(BUILD_DIR)/stage1.bin 
+
+
+$(BUILD_DIR)/stage1.bin: always
+	$(MAKE) -C $(SRC_DIR)/bootloader/stage1 BUILD_DIR=$(abspath $(BUILD_DIR))
+
+stage2: $(BUILD_DIR)/stage2.bin
+
+
+$(BUILD_DIR)/stage2.bin: always
+	$(MAKE) -C $(SRC_DIR)/bootloader/stage2 BUILD_DIR=$(abspath $(BUILD_DIR))
 
 #
 # Kernel
 #
 kernel: $(BUILD_DIR)/kernel.bin
 
-$(BUILD_DIR)/kernel.bin: $(KERNEL_DIR)/main.asm always
-	$(ASM) $(KERNEL_DIR)/main.asm -f bin -o $(BUILD_DIR)/kernel.bin
+$(BUILD_DIR)/kernel.bin: always
+	$(MAKE) -C $(SRC_DIR)/kernel BUILD_DIR=$(abspath $(BUILD_DIR))
+
+#
+# Tools
+#
+tools_fat: $(BUILD_DIR)/tools/fat
+$(BUILD_DIR)/tools/fat: always $(TOOLS_DIR)/fat/fat.c
+	mkdir -p $(BUILD_DIR)/tools
+	$(CC) -g -o $(BUILD_DIR)/tools/fat $(TOOLS_DIR)/fat/fat.c
 
 #
 # Always
@@ -44,4 +66,7 @@ always:
 # Clean
 #
 clean:
+	$(MAKE) -C $(SRC_DIR)/bootloader/stage1 BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
+	$(MAKE) -C $(SRC_DIR)/bootloader/stage2 BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
+	$(MAKE) -C $(SRC_DIR)/kernel BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
 	rm -rf $(BUILD_DIR)/*
