--- a/radical_os/Makefile
+++ b/radical_os/Makefile
@@ -4,7 +4,7 @@ CC16=/usr/bin/watcom/binl/wcc
 LD16 = /usr/bin/watcom/binl/wlink
 SRC_DIR=src
 TOOLS_DIR=tools
-BUILD_DIR=build
+BUILD_DIR=$(abspath build)
 
 .PHONY: all floppy_image kernel bootloader clean always tools_fat
 
@@ -16,12 +16,12 @@ all: floppy_image tools_fat
 floppy_image: $(BUILD_DIR)/main_floppy.img
 
 $(BUILD_DIR)/main_floppy.img: bootloader kernel
-	dd if=/dev/zero of=$(BUILD_DIR)/main_floppy.img bs=512 count=2880
-	mkfs.fat -F 12 -n "RDOS" $(BUILD_DIR)/main_floppy.img
-	dd if=$(BUILD_DIR)/stage1.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
-	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/stage2.bin "::stage2.bin"
-	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
-	mcopy -i $(BUILD_DIR)/main_floppy.img test.txt "::test.txt"
+	dd if=/dev/zero of="$(BUILD_DIR)/main_floppy.img" bs=512 count=2880
+	mkfs.fat -F 12 -n "RDOS" "$(BUILD_DIR)/main_floppy.img"
+	dd if="$(BUILD_DIR)/stage1.bin" of="$(BUILD_DIR)/main_floppy.img" conv=notrunc
+	mcopy -i "$(BUILD_DIR)/main_floppy.img" "$(BUILD_DIR)/stage2.bin" "::stage2.bin"
+	mcopy -i "$(BUILD_DIR)/main_floppy.img" "$(BUILD_DIR)/kernel.bin" "::kernel.bin"
+	mcopy -i "$(BUILD_DIR)/main_floppy.img" test.txt "::test.txt"
 
 #
 # Bootloader
@@ -30,15 +30,13 @@ bootloader: stage1 stage2
 
 stage1: $(BUILD_DIR)/stage1.bin 
 
-
 $(BUILD_DIR)/stage1.bin: always
-	$(MAKE) -C $(SRC_DIR)/bootloader/stage1 BUILD_DIR=$(abspath $(BUILD_DIR))
+	$(MAKE) -C "$(SRC_DIR)/bootloader/stage1" BUILD_DIR="$(BUILD_DIR)"
 
 stage2: $(BUILD_DIR)/stage2.bin
 
-
 $(BUILD_DIR)/stage2.bin: always
-	$(MAKE) -C $(SRC_DIR)/bootloader/stage2 BUILD_DIR=$(abspath $(BUILD_DIR))
+	$(MAKE) -C "$(SRC_DIR)/bootloader/stage2" BUILD_DIR="$(BUILD_DIR)"
 
 #
 # Kernel
@@ -46,27 +44,27 @@ $(BUILD_DIR)/stage2.bin: always
 kernel: $(BUILD_DIR)/kernel.bin
 
 $(BUILD_DIR)/kernel.bin: always
-	$(MAKE) -C $(SRC_DIR)/kernel BUILD_DIR=$(abspath $(BUILD_DIR))
+	$(MAKE) -C "$(SRC_DIR)/kernel" BUILD_DIR="$(BUILD_DIR)"
 
 #
 # Tools
 #
 tools_fat: $(BUILD_DIR)/tools/fat
 $(BUILD_DIR)/tools/fat: always $(TOOLS_DIR)/fat/fat.c
-	mkdir -p $(BUILD_DIR)/tools
-	$(CC) -g -o $(BUILD_DIR)/tools/fat $(TOOLS_DIR)/fat/fat.c
+	mkdir -p "$(BUILD_DIR)/tools"
+	$(CC) -g -o "$(BUILD_DIR)/tools/fat" $(TOOLS_DIR)/fat/fat.c
 
 #
 # Always
 #
 always:
-	mkdir -p $(BUILD_DIR)
+	mkdir -p "$(BUILD_DIR)"
 
 #
 # Clean
 #
 clean:
-	$(MAKE) -C $(SRC_DIR)/bootloader/stage1 BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
-	$(MAKE) -C $(SRC_DIR)/bootloader/stage2 BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
-	$(MAKE) -C $(SRC_DIR)/kernel BUILD_DIR=$(abspath $(BUILD_DIR)) clean 
-	rm -rf $(BUILD_DIR)/*
+	$(MAKE) -C "$(SRC_DIR)/bootloader/stage1" BUILD_DIR="$(BUILD_DIR)" clean 
+	$(MAKE) -C "$(SRC_DIR)/bootloader/stage2" BUILD_DIR="$(BUILD_DIR)" clean 
+	$(MAKE) -C "$(SRC_DIR)/kernel" BUILD_DIR="$(BUILD_DIR)" clean 
+	rm -rf "$(BUILD_DIR)"/*
